--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "freight-packer",
   "version": "0.1.0",
   "description": "Freight packing tool",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "scripts": {
     "compile": "webpack",
-    "build": "webpack -p",
-    "start": "node server.js"
+    "build": "SET NODE_ENV=production && webpack -p --config webpack/prod.config.js",
+    "test": "SET NODE_ENV=development && webpack --config webpack/dev.config.js"
   },
   "keywords": [
     "threejs",
@@ -14,17 +14,18 @@
     "babel"
   ],
   "author": "Chady Karlitch",
-  "license": "0",
+  "license": "UNLICENSED",
   "repository": {
     "type": "git",
-    "url": "git://github.com/chadiik/freight-packer.git"
+    "url": "https://Chadiik@bitbucket.org/Chadiik/freight-packer.git"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "express": "^4.16.2",
     "webpack": "^3.9.1",
-    "webpack-dev-middleware": "^1.12.2"
-  }
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-merge": "^4.1.3"
+  },
+  "devDependencies": {}
 }
