--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "regenerator-runtime": "^0.12.0",
     "webpack": "^3.9.1",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-merge": "^4.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1"
+  }
 }
