--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1"
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "raw-loader": "^0.5.1"
   }
 }
