--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "freight-packer",
   "version": "0.1.0",
   "description": "Freight packing tool",
-  "main": "src/main.js",
+  "main": "src/FreightPacker.js",
   "scripts": {
     "compile": "webpack",
-    "build": "SET NODE_ENV=production && webpack -p --config webpack/prod.config.js",
-    "example": "SET NODE_ENV=development && webpack --config webpack/dev.config.js",
+
+    "lib": "SET NODE_ENV=development && webpack --config webpack/lib.config.js",
+
     "editor": "SET NODE_ENV=development && webpack --config webpack/editor.config.js",
-    "lib": "SET NODE_ENV=development && webpack --config webpack/lib.dev.config.js"
+    "example": "SET NODE_ENV=development && webpack --config webpack/dev.config.js",
+    
+    "build": "SET NODE_ENV=production && webpack --config webpack/prod.config.js",
+    "loader": "SET NODE_ENV=development && webpack --config webpack/loader.config.js"
   },
   "keywords": [
     "threejs",
@@ -23,12 +27,13 @@
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.1",
-    "regenerator-runtime": "^0.12.0",
+    "freight-packer-lib-bundle": "file:local_modules/freight-packer-lib-bundle",
+    "regenerator-runtime": "^0.12.1",
     "webpack": "^3.9.1",
     "webpack-dev-middleware": "^1.12.2",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
